Creating services for Employee retrieval

--- a/WorkHourPlus/Components/App.razor
+++ b/WorkHourPlus/Components/App.razor
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="@Assets["lib/mdb/css/mdb.min.css"]" />
     <link rel="stylesheet" href="@Assets["app.css"]" />
     <link rel="stylesheet" href="@Assets["WorkHourPlus.styles.css"]" />
-    <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
+    <RadzenTheme Theme="standard" @rendermode="InteractiveServer" />
     <ImportMap />
     <HeadOutlet @rendermode="@PageRenderMode" />
 </head>
-
+    
 <body>
     <Routes @rendermode="@PageRenderMode" />
     <ReconnectModal />
@@ -26,7 +26,7 @@
 
 @code {
     [CascadingParameter]
-    private HttpContext HttpContext { get; set; } = default!;
+    private HttpContext HttpContext { get; set; } = null!;
 
     private IComponentRenderMode? PageRenderMode
     => HttpContext.AcceptsInteractiveRouting() ? InteractiveServer : null;
