--- a/WorkHourPlus/Components/Layout/Header.razor
+++ b/WorkHourPlus/Components/Layout/Header.razor
@@ -1,5 +1,6 @@
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Components.Authorization
+@using WorkHourPlus.Entities.Enums
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container-fluid">
@@ -14,13 +15,17 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="/">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="/privacy">Privacy</a>
-                    </li>
+                    <AuthorizeView Roles="@($"{nameof(Roles.Superadmin)},{nameof(Roles.Manager)}")">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/employee-list">Employees</a>
+                        </li>
+                    </AuthorizeView>
                 </ul>
-                <div class="flex gap-3">
+                <div class="flex">
                     <AuthorizeView>
-                        <span class="fw-bolder">@context.User.FindFirstValue(ClaimTypes.Name)</span>
+                        <span class="fw-bolder">
+                            @context.User.FindFirstValue(ClaimTypes.Name)
+                        </span>
                         <span class="mx-2">•</span>
                         <a href="/logout">Logout</a>
                     </AuthorizeView>
