--- a/WorkHourPlus/Components/_Imports.razor
+++ b/WorkHourPlus/Components/_Imports.razor
@@ -16,5 +16,6 @@
 @using WorkHourPlus.Services.Contracts
 @inject IServiceManager ServiceManager
 @inject NavigationManager NavigationManager
+@inject DialogService DialogService
+@inject NotificationService NotificationService
 @attribute [Authorize]
-
