--- a/WorkHourPlus/Components/App.razor
+++ b/WorkHourPlus/Components/App.razor
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <ResourcePreloader />
-    <link rel="stylesheet" href="@Assets["lib/mdb/css/mdb.min.css"]" />
+    <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]" />
     <link rel="stylesheet" href="@Assets["app.css"]" />
     <link rel="stylesheet" href="@Assets["WorkHourPlus.styles.css"]" />
     <RadzenTheme Theme="standard" @rendermode="InteractiveServer" />
