--- a/WorkHourPlus/Components/Auth/Pages/LoginPage.razor
+++ b/WorkHourPlus/Components/Auth/Pages/LoginPage.razor
@@ -1,5 +1,10 @@
 @page "/login"
-@layout WorkHourPlus.Components.Auth.Shared.LoginLayout
+@using System.Security.Claims
+@using Microsoft.AspNetCore.Authentication
+@using Microsoft.AspNetCore.Authentication.Cookies
+@using WorkHourPlus.Entities.Enums
+@using WorkHourPlus.Shared.DTOs
+@layout LoginLayout
 
 <EditForm Model="LoginModel" OnValidSubmit="@HandleSubmit" FormName="LoginForm">
   @if (!string.IsNullOrEmpty(_errorMessage))
@@ -7,15 +12,25 @@
     <h5 class="my-3 text-danger">@_errorMessage</h5>
   }
   <DataAnnotationsValidator/>
-  <div class="form-outline mb-4">
-    <InputText class="form-control form-control-lg" @bind-value="@LoginModel!.Username"/>
-    <label class="form-label">Username</label>
+  <div class="form-floating mb-4">
+    <InputText id="username"
+               class="form-control form-control-lg"
+               @bind-value="@LoginModel!.Username"/>
+    <label class="form-label" for="username">
+      Username
+    </label>
     <ValidationMessage For="() => LoginModel!.Username"/>
   </div>
 
-  <div class="form-outline mb-4">
-    <InputText type="password" class="form-control form-control-lg" @bind-value="@LoginModel!.Password"/>
-    <label class="form-label">Password</label>
+  <div class="form-floating mb-4">
+    <InputText type="password"
+               id="password"
+               class="form-control form-control-lg"
+               @bind-value="@LoginModel!.Password"/>
+    <label class="form-label"
+           for="password">
+      Password
+    </label>
     <ValidationMessage For="() => LoginModel!.Password"/>
   </div>
 
@@ -31,3 +46,45 @@
     Sign in
   </button>
 </EditForm>
+
+@code {
+
+  [CascadingParameter]
+  private HttpContext HttpContext { get; set; } = null!;
+
+  [SupplyParameterFromForm(FormName = "LoginForm")]
+  public LoginDto? LoginModel { get; set; }
+
+  private string _errorMessage = "";
+
+  protected override void OnInitialized()
+  {
+    LoginModel ??= new LoginDto();
+  }
+
+  private async Task HandleSubmit()
+  {
+    var user = await ServiceManager.UserService.GetUserByUsername(LoginModel!.Username!);
+    if (user is null || !user.Password.Equals(LoginModel.Password, StringComparison.InvariantCultureIgnoreCase))
+    {
+      _errorMessage = "Username or password is incorrect";
+      return;
+    }
+
+    var employee = user.Role is nameof(Roles.Superadmin)
+      ? null
+      : await ServiceManager.EmployeeService.GetEmployeeById(user.EmployeeId ?? 0);
+
+    List<Claim> claims = [
+      new(ClaimTypes.Name, employee?.Name ?? user.Username),
+      new(ClaimTypes.Role, user.Role),
+      new("EmployeeId", user.EmployeeId?.ToString()!),
+    ];
+
+    var identity = new ClaimsIdentity(claims, CookieAuthenticationDefaults.AuthenticationScheme);
+    var principal = new ClaimsPrincipal(identity);
+
+    await HttpContext.SignInAsync(CookieAuthenticationDefaults.AuthenticationScheme, principal);
+    HttpContext.Response.Redirect("/");
+  }
+}
