--- a/WorkHourPlus/Components/_Imports.razor
+++ b/WorkHourPlus/Components/_Imports.razor
@@ -14,6 +14,7 @@
 @using Radzen.Blazor
 @using WorkHourPlus.Contracts
 @using WorkHourPlus.Services.Contracts
+@using WorkHourPlus.Components.Shared
 @inject IServiceManager ServiceManager
 @inject NavigationManager NavigationManager
 @inject DialogService DialogService
