--- a/WorkHourPlus/Components/Layout/MainLayout.razor
+++ b/WorkHourPlus/Components/Layout/MainLayout.razor
@@ -4,8 +4,10 @@
 
 <RadzenComponents/>
 
-<CascadingValue Value="_currentEmployeeId" Name="CurrentEmployeeId" IsFixed="true">
-    <Header></Header>
+<CascadingValue Value="_currentEmployeeId" 
+                Name="CurrentEmployeeId"
+                IsFixed="true">
+    <Header />
     <div class="container">
         <main role="main" class="pb-3">
             @Body
