--- a/WorkHourPlus/Components/Layout/MainLayout.razor
+++ b/WorkHourPlus/Components/Layout/MainLayout.razor
@@ -7,7 +7,7 @@
 <CascadingValue Value="_currentEmployeeId" 
                 Name="CurrentEmployeeId"
                 IsFixed="true">
-    <Header />
+    <Header></Header>
     <div class="container">
         <main role="main" class="pb-3">
             @Body
