--- a/WorkHourPlus/Components/Pages/Grade/AddEditGradePopup.razor
+++ b/WorkHourPlus/Components/Pages/Grade/AddEditGradePopup.razor
@@ -14,6 +14,11 @@
                 <RadzenRequiredValidator Component="GradeName"
                                          Text="Name is required"
                                          Style="color:red" />
+                <RadzenCustomValidator Component="GradeName"
+                                       Validator="@(() => ValidateNewGrade(_addEditGradeDto!.Name))"
+                                       Text="Grade already exists"
+                                       Style="color:red" />
+
             </div>
         </div>
     </div>
@@ -55,5 +60,10 @@
     private void Submit(AddEditGradeDto dto)
     {
         DialogService.Close(dto);
+    }
+
+    private bool ValidateNewGrade(string name)
+    {
+        return !_allGrades.Any(x => x.Name == name);
     }
 }
